Tue Oct  6 02:29:38 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_resurrect): optimize by short circuit to copy
	  hidden string without checking length, encoding and so on.

Mon Oct  5 23:08:17 2015  CHIKANAGA Tomoyuki  <nagachika@ruby-lang.org>

	* test/ruby/test_thread.rb (test_handle_interrupt_blocking): check if
	  exception handling was postponed until sleep.

Mon Oct  5 22:25:49 2015  Tanaka Akira  <akr@fsij.org>

	* lib/pp.rb: Use frozen_string_literal: true.

	* lib/prettyprint.rb: Ditto.

	* lib/resolv.rb: Ditto.

	* lib/tmpdir.rb: Ditto.

	* test/test_pp.rb: Ditto.

	* test/test_prettyprint.rb: Ditto.

	* tool/transcode-tblgen.rb: Ditto.

Mon Oct  5 20:39:32 2015  Benoit Daloze  <eregontp@gmail.com>

	* test/ruby/test_thread.rb: fix potential race condition.
	  The thread could have a "sleep" status because it tries
	  to acquire the mutex, but does not have it yet.

Mon Oct  5 15:39:30 2015  Zachary Scott  <zzak@ruby-lang.org>

	* numeric.c: [DOC] Overview for Numeric class by Joe Corcoran
	  This patch was created at ROSSConf Berlin 2015 [Bug #11555]

Mon Oct  5 15:34:56 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* proc.c (proc_new): link ep to calling block.
	  [ruby-core:70980] [Bug #11566]

Mon Oct  5 00:53:51 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (rb_dir_getwd): make ASCII-8BIT if filesystem encoding is
	  US-ASCII, like as Dir.glob.

Sun Oct  4 23:39:09 2015  Tanaka Akira  <akr@fsij.org>

	* enum.c (nmin_filter): Fix limit value.
	  patch by Helder Pereira.
	  [Bug #11471] [ruby-core:70477]

Sun Oct  4 15:11:48 2015  NARUSE, Yui  <naruse@ruby-lang.org>

	* enc/euc_jp.c (mbc_case_fold): check given string is valid or not,
	  and if invalid, return 1. [Bug #11486]

Sun Oct  4 10:09:57 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (rb_dir_getwd): normalize OS path to UTF-8 on OS X.

Sun Oct  4 00:09:45 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
